# backend/docs/swagger.json
@@ -134,6 +134,12 @@
                     "items": {
                         "$ref": "#/definitions/response.BusStop"
                     }
+                },
+                "parent_route_id": {
+                    "type": "string"
+                },
+                "parent_route_name": {
+                    "type": "string"
                 }
             }
         },
