# backend/domain/repository/parent_routes_repository_interface.go
@@ -1,11 +1,12 @@
 package repository
 
 import (
-  "context"
-  "github.com/tsuna-can/express-bus-time-table-app/backend/domain/entity"
+	"context"
+
+	"github.com/tsuna-can/express-bus-time-table-app/backend/domain/entity"
 )
 
 type ParentRoutesRepository interface {
-  GetAll(ctx context.Context) ([]entity.ParentRoute, error)
+	GetAll(ctx context.Context) ([]entity.ParentRoute, error)
+	GetByParentRouteId(ctx context.Context, parentRouteId string) (entity.ParentRoute, error)
 }
-
