# backend/handler/response/get_bus_stops_response.go
@@ -5,7 +5,9 @@ import (
 )
 
 type BusStopResponse struct {
-	BusStops []BusStop `json:"bus_stops"`
+	ParentRouteId   string    `json:"parent_route_id"`
+	ParentRouteName string    `json:"parent_route_name"`
+	BusStops        []BusStop `json:"bus_stops"`
 }
 
 type BusStop struct {
@@ -13,15 +15,17 @@ type BusStop struct {
 	BusStopName string `json:"bus_stop_name"`
 }
 
-func NewBusStopsResponse(busStops []entity.BusStop) *BusStopResponse {
+func NewBusStopsResponse(busStops []entity.BusStop, parentRoute entity.ParentRoute) *BusStopResponse {
 	busStopResponses := make([]BusStop, 0, len(busStops))
 	for _, bs := range busStops {
 		busStopResponses = append(busStopResponses, BusStop{
 			BusStopId:   bs.BusStopId,
-      BusStopName: bs.BusStopName.Value(),
+			BusStopName: bs.BusStopName.Value(),
 		})
 	}
 	return &BusStopResponse{
-		BusStops: busStopResponses,
+		ParentRouteId:   parentRoute.ParentRouteId,
+		ParentRouteName: parentRoute.ParentRouteName.Value(),
+		BusStops:        busStopResponses,
 	}
 }
